--- a/solutions/exercise-12/view/Master.view.xml
+++ b/solutions/exercise-12/view/Master.view.xml
@@ -21,26 +21,16 @@
 				<ObjectListItem
 					type="{device>/listItemType}"
 					press="onPress"
-					title="{Name}"
-					number="{Price}"
+					title="{ProductName}"
+					number="{UnitPrice}"
 					numberUnit="Euro">
 					<attributes>
 						<ObjectAttribute
-							text="{
-								path : 'ReleaseDate',
-								formatter : 'openui5.util.formatter.date'
-							}" />
+							text="{QuantityPerUnit}" />
 					</attributes>
 					<firstStatus>
 						<ObjectStatus
-							text="{
-								path : 'Rating',
-								formatter : 'openui5.util.formatter.ratingText'
-							}"
-							state="{
-								path : 'Rating',
-								formatter : 'openui5.util.formatter.ratingState'
-							}" />
+							text="{UnitsInStock}/{ReorderLevel}/{UnitsOnOrder}" />
 					</firstStatus>
 			</ObjectListItem>
 			</items>
@@ -52,6 +42,7 @@
 						change="onGroup"
 						icon="sap-icon://group-2"
 						type="IconOnly"
+						enabled="false"
 						selectedKey="None"
 						autoAdjustWidth="true">
 						<core:Item
