--- a/solutions/exercise-12/view/Master.view.xml
+++ b/solutions/exercise-12/view/Master.view.xml
@@ -22,7 +22,13 @@
 					type="{device>/listItemType}"
 					press="onPress"
 					title="{ProductName}"
-					number="{UnitPrice}"
+					number="{
+						path : 'UnitPrice',
+						type : 'sap.ui.model.type.Float',
+						formatOptions : {
+							maxFractionDigits : 2
+						}
+					}"
 					numberUnit="Euro">
 					<attributes>
 						<ObjectAttribute
